<resources>
    <string name="action_settings">Acciones</string>
    <string name="accept">OK</string>
    <string name="app_name">Tarefa PMDM04</string>
    <string name="cancel">Cancelar</string>
    <string name="category">Categoría</string>
    <string name="choose_option">Elixa unha opción</string>
    <string name="city">Cidade</string>
    <string name="confirm_order">Confirmar pedido</string>
    <string name="create_account">Crear conta</string>
    <string name="dummy_admin">NomeB Apelido1B Apelido2B</string>
    <string name="dummy_client">NomeA Apelido1A Apelido2A</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="email">Correo electrónico</string>
    <string name="error">Erro</string>
    <string name="error_empty_fields">Hai campos baleiros</string>
    <string name="error_invalid_credentials">Credenciais non válidas</string>
    <string name="error_password_not_match">Os contrasinais non coinciden</string>
    <string name="error_permission_needed">Permiso necesario</string>
    <string name="finish">Finalizar</string>
    <string name="id">Id</string>
    <string name="load_image">Cargar imaxe</string>
    <string name="log_in">Acceder</string>
    <string name="log_out">Saír</string>
    <string name="make_order">Facer pedido</string>
    <string name="name">Nome</string>
    <string name="new_password">Novo contrasinal</string>
    <string name="next">Seguinte</string>
    <string name="order">Pedido</string>
    <string name="order_done">Realizouse o pedido</string>
    <string name="password">Contrasinal</string>
    <string name="product">Producto</string>
    <string name="products">Productos</string>
    <string name="register">Rexistrarse</string>
    <string name="register_instructions">Non dispón de usuario? Cree unha conta</string>
    <string name="reject">X</string>
    <string name="repeat_new_password">Repita novo contrasinal</string>
    <string name="result_order_accepted">Aceptouse o pedido</string>
    <string name="result_order_rejected">Rechazouse o pedido</string>
    <string name="role">Rol</string>
    <string name="take_photo">Facer foto</string>
    <string name="quantity">Cantidade</string>
    <string name="save">Gardar</string>
    <string name="see_accepted_orders">Ver pedidos aceptados</string>
    <string name="see_orders_in_process">Ver pedidos en trámite</string>
    <string name="see_rejected_orders">Ver pedidos rexeitados</string>
    <string name="see_purchases_made">Ver compras realizadas</string>
    <string name="street">Dirección</string>
    <string name="surname">Apelidos</string>
    <string name="user_created">Creouse o usuario</string>
    <string name="user_updated">Actualizouse o usuario</string>
    <string name="username">Usuario</string>
    <string name="your_order">O seu pedido</string>
    <string name="zip_code">Código postal</string>
</resources>
