<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/makeOrder"
        android:orderInCategory="100"
        android:title="@string/make_order"
        app:showAsAction="never" />

    <item
        android:id="@+id/seeOrders"
        android:orderInCategory="100"
        android:title="@string/see_orders_in_process"
        app:showAsAction="never" />

    <item
        android:id="@+id/seePurchases"
        android:orderInCategory="100"
        android:title="@string/see_purchases_made"
        app:showAsAction="never" />

    <item
        android:id="@+id/editProfile"
        android:orderInCategory="100"
        android:title="@string/edit_profile"
        app:showAsAction="never" />

</menu>
